# CrustyCrab

./: Cargo.toml  README.md
.github/workflows/: crustycrab.yml  rust.yml
misc/: help.txt
src/: lib.rs  main.rs  usr_mods.rs
src/usr_mods/: checkvm.rs  example.rs  firefox_creds.rs  password_dump.rs  remove_iptables.rs  sys_info.rs
static/: banner.txt  help.txt
static/art/: banner0.txt  banner10.txt  banner11.txt  banner12.txt  banner4.txt  banner5.txt  banner6.txt  banner7.txt  banner9.txt  spongerob.txt  squid.txt  squidward.txt
tests/: test_connection.rs  test_implant.rs
