[package]
name = "crusty_crab"
version = "0.2.0"
edition = "2021"
authors = ["Alex Schmith", "Chandler Hake", "Robbie Heine"]
#documentation =
publish = false

[lib]
name = "crabby_patty_formula"
path = "src/lib.rs"
create-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
overflow-checks = true
opt-level = "z"
lto = true
panic = "abort"

[profile.dev]
opt-level = "z"
panic = "unwind"

[profile.basic]
inherits = "dev"

[profile.windows]
inherits = "dev"

[dependencies]
run_script = "^0.10.0" 
log = "0.4"
socket2 = "0.4.7"
gethostname = "0.2.3"
bytes = "1.2.1"
reqwest = "0.11"
tokio = "1"
names = "0.14.0"
iptables = "0.4"


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }
winreg = "0.10"
